# csspin-workflows

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  spinfile.yaml
.gitlab/merge_request_templates/: default.md
doc/: conf.py  development.rst  index.rst  installation.rst  links.rst  relnotes.rst
doc/plugins/: stdworkflows.rst
docs/: conf.py  index.rst  installation.rst
docs/plugins/: stdworkflows.rst
src/csspin_workflows/: stdworkflows.py
src/spin_conpod/: stdworkflows.py  stdworkflows_schema.yaml
src/spin_consd/: stdworkflows.py
tests/: conftest.py
tests/integration/: test_provisioning.py
tests/integration/yamls/: stdworkflows.yaml
tests/yamls/: minimal.yaml
